--- a/app/templates/insights.hbs
+++ b/app/templates/insights.hbs
@@ -2,3 +2,7 @@
 <InsightsChart @info={{this.model}} @type=1 />
 
 <InsightsChart @info={{this.model}} @type=2 />
+
+
+In the first chart, you can see the share of each genre in artists that you listen to. <br>
+In the second chart, you can see the share of each of the top 10 artists in the music that you listen to.
