--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,2 +1,18 @@
 {{page-title "About"}}
-Some text
+
+<div class= 'about'>
+    <i>MuseSight</i> gives you an insight into the music that you tipically listen to via Spotify.
+    It allows you to see your favourite tracks and artists and see statistical data about your favourite music.
+    In addition, you can even listen to your favourite songs and open all the data in Spotify as well.
+    <br> <br>
+
+    In order to be able to use the app, you have to login using your Spotify credentials.
+    After that, you will be redirected to the <i>Favourites</i> page and you are free to start investigating your favourite music.
+    To be able to listen to music in this app, you have to go to your Spotify player and click on the
+    <i>Connect to a device</i> button (computer screen and speaker). There you must choose <i>MuseSight Playback</i>.
+    Now you can listen to music in the app.
+</div>
+
+<div class='about-bottom'>
+    <i>This app was made as a part of my master's thesis in 2022.</i>
+</div>
